# rpi5_camera_capture

./: CMakeLists.txt  README.md  build.sh
include/: CameraManager.hpp  IVideoCapture.hpp  VideoCapture.hpp  WebServer.hpp
src/: CameraManager.cpp  VideoCapture.cpp  WebServer.cpp  main.cpp
